examples/test/testpolicy11401.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11401
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key1: value3
      key5: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value48
          key16: value11
      podSelector:
        matchLabels:
          key14: value16
